[package]
name = "b3-wasm-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
calamine = "0.19.1"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
js-sys = "0.3.60"
serde = {version="1.0.149", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
gloo-utils = { version = "0.1", features = ["serde"] }
chrono = "0.4.23"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "HtmlInputElement",
    "FileList",
    "File",
    "FileReader",
    "console"
]